// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FileUploader rendering renders expected elements 1`] = `
<FieldWrapper
  className="FileUploader"
  helperId="random-id-helper"
  htmlFor="random-id"
  label="Test"
>
  <FileUploaderDropZone
    aria-describedby="random-id-helper"
    error={false}
    id="random-id"
    label="Test"
    onAddFiles={[Function]}
    text="Test drop zone"
  />
  <FileUploaderList
    onClick={[Function]}
  >
    <FileUploaderItem
      data-index={0}
      data-testid="remove-file"
      name="foo.txt"
    />
  </FileUploaderList>
</FieldWrapper>
`;

exports[`FileUploader rendering renders expected elements when files is not set 1`] = `
<FieldWrapper
  className="FileUploader"
  helperId="random-id-helper"
  htmlFor="random-id"
  label="Test"
>
  <FileUploaderDropZone
    aria-describedby="random-id-helper"
    error={false}
    id="random-id"
    label="Test"
    onAddFiles={[Function]}
    text="Test drop zone"
  />
</FieldWrapper>
`;

exports[`FileUploader rendering renders expected elements when optional properties are set 1`] = `
<FieldWrapper
  className="FileUploader TestClass"
  error="Test error"
  helperId="random-id-helper"
  htmlFor="random-id"
  label="Test"
  required={true}
>
  <FileUploaderDropZone
    aria-describedby="random-id-helper"
    disabled={true}
    error={true}
    id="random-id"
    label="Test"
    multiple={true}
    onAddFiles={[Function]}
    required={true}
    text="Test drop zone"
    types="test-types"
  />
  <FileUploaderList
    onClick={[Function]}
  >
    <FileUploaderItem
      data-index={0}
      data-testid="remove-file"
      disableDelete={true}
      error="Test file error"
      name="foo.txt"
    />
  </FileUploaderList>
</FieldWrapper>
`;
